--- a/app/globals.css
+++ b/app/globals.css
@@ -250,9 +250,9 @@ body {
 }
 
 .react-datepicker__day--selected {
-  background-color: #624cf5 !important;
+  background-color: #009723 !important;
   color: #ffffff !important;
-  border-radius: 4px;
+  border-radius: 10px;
 }
 
 .react-datepicker__time-list-item--selected {
