--- a/app/globals.css
+++ b/app/globals.css
@@ -58,7 +58,8 @@
 }
 
 body {
-  font-family: var(--font-poppins)
+  font-family: var(--font-poppins);
+  /* user-select: none; */
 }
 
 .filter-grey {
